2001-10-06  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: change the shortcut for Numbered
	List from n to l.

2001-10-05  Radek Doulik  <rodo@ximian.com>

	* image.c (insert_or_apply): use html_image_edit_set_url

2001-10-04  Larry Ewing  <lewing@ximian.com>

	* Editor.idl: add the new event type and update copyright.

	* Makefile.am (GTKHTML_EDITOR_SOURCES_COMMON): add
	html-stream-mem.[ch]

	* editor-control-factory.c (url_requested_cb): rework to pass the
	url request to the listener using send_event_stream.
	(send_event_stream): ask for the url through the listener.
	(init_corba): change the name to reflect the renaming from long
	ago.

	html-stream-mem.[ch]: add a stream mem implementation that also
	writes directly to the GtkHTMLStream.

2001-10-04  Tuomas Kuosmanen  <tigert@ximian.com>

	* template.c: Small beautification; Image frame should have the 
	text with a smaller font since it looks nicer and also you
	can fit more text that way.

2001-09-19  Radek Doulik  <rodo@ximian.com>

	* table.c: don't change rows/cols when changing templates

2001-09-18  Larry Ewing  <lewing@ximian.com>

	* image.c (image_widget): don't make widgets that we never
	actually use.

2001-09-14  Radek Doulik  <rodo@ximian.com>

	* spell.c (spell_check_dialog): show ok dialog when there aren't
	misspelled words

	* popup.c (prepare_properties_and_menu): renamed spell checking
	item to _("Check '%s' spelling..."), word

	* GNOME_GtkHTML_Editor.xml.in: renamed spell checking item to
	"_Spell check document..."

	* spell.c (check_next_word): check next word only when
	cd->spell_check_next is TRUE and there is next word to check

	* control-data.h: added spell_check_next flag

	* menubar.c (spell_check_cb): spell check whole document

	* spell.c (spell_check_document): on start, go to begin of
	document

2001-09-13  Radek Doulik  <rodo@ximian.com>

	* popup.c (spell_add): use html_engine_spell_check
	(spell_ignore): ditto
