@@ -39,8 +39,13 @@ void                spell_add_to_session      (GtkHTML            *html,
 void                spell_add_to_personal     (GtkHTML            *html,
 					       const gchar        *word,
 					       gpointer            data);
+void                spell_set_language        (GtkHTML            *html,
+					       const gchar        *language,
+					       gpointer            data);
 void                spell_check_dialog        (GtkHTMLControlData *cd,
 					       gboolean            whole_document);
 gboolean            spell_has_control         (void);
+void                spell_init                (GtkHTML            *html,
+					       GtkHTMLControlData *cd);
 
 #endif
